<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/StyleForMainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frameLayoutText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textFontWeight="500"
            android:textSize="24sp" />
    </FrameLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayoutText"
        app:layout_constraintVertical_bias="1.0">


        <Button
            android:id="@+id/ButtonSearch"
            style="@style/ButtonsMainActivityLightTheme"
            android:text="@string/search"
            android:textColor="@color/black"
            app:cornerRadius="@dimen/button_corner_radius"
            app:icon="@drawable/ic_search"
            app:iconGravity="textStart"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/ButtonLibrary"
            style="@style/ButtonsMainActivityLightTheme"
            android:text="@string/library"
            android:textColor="@color/black"
            app:cornerRadius="@dimen/button_corner_radius"
            app:icon="@drawable/ic_library"
            app:iconGravity="textStart"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/ButtonSettings"
            style="@style/ButtonsMainActivityLightTheme"
            android:text="@string/setting"
            android:textColor="@color/black"
            app:cornerRadius="@dimen/button_corner_radius"
            app:icon="@drawable/ic_settings"
            app:iconGravity="textStart"
            app:iconTint="@color/black" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
