<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground">

    <FrameLayout
        android:id="@+id/frameLayoutSettingsHeader"
        style="@style/SettingsFrameLayout"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:windowBackground"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/backButton"
                style="@style/BackButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:background="@android:color/transparent" />


            <TextView
                style="@style/TextSettingsAndSearchHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:background="?android:windowBackground"
                android:text="@string/setting" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/SettingsTheme"
        style="@style/SettingsFrameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayoutSettingsHeader">

        <LinearLayout
            android:id="@+id/theme"
            style="@style/SettingsLinearLayout">

            <TextView
                style="@style/SettingsTextView"
                android:text="@string/settings_theme_switch" />

            <Switch
                android:layout_width="56dp"
                android:layout_height="48dp"
                android:layout_gravity="end"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/ShareSettings"
        style="@style/SettingsFrameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SettingsTheme">

        <LinearLayout
            android:id="@+id/share"
            style="@style/SettingsLinearLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/theme">

            <TextView
                style="@style/SettingsTextView"
                android:text="@string/settings_share_app" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/share_download2"
                app:tint="@color/light_theme_sett_icons" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/SupportSettings"
        style="@style/SettingsFrameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ShareSettings">

        <LinearLayout
            android:id="@+id/Support"
            style="@style/SettingsLinearLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/share">

            <TextView
                style="@style/SettingsTextView"
                android:text="@string/settings_support" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/headphones"
                app:tint="@color/light_theme_sett_icons" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/LicenseSettings"
        style="@style/SettingsFrameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SupportSettings">

        <LinearLayout
            android:id="@+id/License"
            style="@style/SettingsLinearLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Support">

            <TextView
                style="@style/SettingsTextView"
                android:text="@string/settings_licence" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/arrow_license"
                app:tint="@color/light_theme_sett_icons" />
        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>