<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground">

    <FrameLayout
        android:id="@+id/frameLayoutSearchHeader"
        style="@style/SettingsFrameLayout"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:windowBackground"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/backButtonSearch"
                style="@style/BackButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:background="@android:color/transparent" />

            <TextView
                style="@style/TextSettingsAndSearchHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:background="?android:windowBackground"
                android:text="@string/search_header" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayoutSearchHeader">

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/search_form_background_light"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="8dp"
            android:drawableTint="@color/search_hint_color"
            android:hint="@string/search_hint"
            android:inputType="text"
            android:maxLength="30"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/search_hint_color" />

        <ImageButton
            android:id="@+id/clearSearchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/clear_search"
            android:src="@drawable/ic_clear"
            android:visibility="gone" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>